--- a/clases-de-aerobic.html
+++ b/clases-de-aerobic.html
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -276,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Gana resistencia, coordinación, flexibilidad a la vez que tonificas tu cuerpo.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">CLASES DE AERÓBIC PARA PRINCIPIANTES</h2>
                     <p class="text-white text-medium mb-5">Quieres ponerte en forma al ritmo de la música? Ahora puedes hacerlo con nuestras clases de aeróbic en casa.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -368,7 +368,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Tanto si eres principiante en esta disciplina, como si tienes un nivel más avanzado tenemos clases para tí , que te ayudarán a mejorar a nivel físico, aumentando tu resistencia aeróbica  y tonificando toda tu musculatura.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Empieza hoy mismo a realizar nuestras clases de aeróbic completas y en pocas semanas verás los resultados. Únete a ictiva, tu gimnasio online y pásate a un estilo de vida más saludable.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -386,7 +386,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Con nuestras videosesiones para hacer en casa irás mejorando en la práctica de esta disciplina a medida que vayas avanzando y asimilando nuevos pasos. Es importante repetir las videosesiones varias veces con el fin de asimilar bien los pasos y ganar una forma física óptima.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>A qué esperas a empezar con nuestras clases de aeróbic para principiantes? Quema calorías y ponte en forma desde casa mientras te diviertes bailando al ritmo de la música.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -403,7 +403,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En las clases de aeróbic online más avanzadas trabajarás mucho más la coordinación y la resistencia y aprenderás ejercicios de aeróbic de mayor dificultad como el Mambo, el Lounge o el Grapvine.</p>
                     <p class="mb-3 ls text-medium">Fácil y sencillo. Solo tienes que darle al play de la sesión que elijas  y seguir la clase con nuestra monitora, como si de una sesión presencial se tratara. Es estar como en un gimnasio, pero estando en la comodidad de tu hogar.</p>
                     <p class="mb-3 ls text-medium">Practicando todos estos ejercicios día a día, en pocas semanas ganarás resistencia, mejorarás a nivel cardiovascular, perderás peso, eliminarás celulitis y te sentirás mucho mejor gracias a la actividad física realizada. Recuerda que la práctica asidua del deporte te dará salud y bienestar!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -422,7 +422,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Pero la aplicación de ictiva no solo te permite realizar esta disciplina, sino que tienes muchas otras más que pueden complementar tus sesiones, como puede ser el Step, ejercicios de Fitness, Combat, entrenamientos de alta intensidad y otras muchas más disciplinas! Descúbrelas.</p>
                     <p class="mb-3 ls text-medium">La app de ictiva, gracias a su variedad de disciplinas (25) y sus más de 800 videosesiones, y diversas rutinas de entrenamiento con planes nutricionales incluidos, hace de ella la aplicación de salud y bienestar más completa del mercado.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a descargártela? Tienes más de 50 clases gratis a tu disposición!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -439,7 +439,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Gracias al bagaje y experiencia, nuestra monitora te guiará en  todas las sesiones virtuales. Como si se tratara de una clase presencial, te sentirás acompañad@ en todo momento, donde te explicará paso a paso cómo realizar los diferentes ejercicios.</p>
                     <p class="mb-3 ls text-medium">Con nuestra Monitora Raquel Talavera realizar nuestras sesiones te será muy sencillo y cómodo. Desarrollarás capacidad de coordinación, armonía corporal, y  ganarás flexibilidad y resistencia física.</p>
                     <p class="mb-3 ls text-medium">Únete a nuestra comunidad y síguenos a través de las Redes Sociales.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -457,7 +457,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Conserva un nivel de hidratación adecuado en función del ejercicio físico y de la temperatura ambiente en la que estés practicando dicha actividad.</p>
                     <p class="mb-3 ls text-medium">Para alcanzar unos resultados óptimos tienes que ser constante con tu rutina de entrenamiento. Aconsejando que al menos hagas ejercicio tres veces por semana como mínimo.</p>
                     <p class="mb-3 ls text-medium">El cálculo de la quema  calorias que encontrarás en cada sesión corresponde a una media aproximada. Ictiva no se hace responsable del uso inadecuado de nuestra plataforma y no garantiza su resultado, ya que éste depende de mucho factores (genéticos, nutricionales, de la duración de la actividad física y de la constancia de la misma, aparte de otros factores)</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
