--- a/ejercicios-aerobicos.html
+++ b/ejercicios-aerobicos.html
@@ -256,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -275,7 +275,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Entrena desde casa con nuestras sesiones aeróbicos online.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">EJERCICIOS AERÓBICOS PARA PRINCIPIANTES</h2>
                     <p class="text-white text-medium mb-5">Tonifica tu cuerpo y quema calorías al ritmo de la música. Sesiones para principiantes y niveles más avanzados!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Prueba gratis ictiva</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -367,7 +367,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>En estas sesiones  podrás encontrar desde entrenos aeróbicos para principiantes, hasta sesiones más avanzadas. Como si se tratara de una clase personalizada, nuestra Monitora será tu guía durante toda la sesión, única y exclusivamente para ti. Así de fácil! Sólo le tienes que dar al Play y seguir los ejercicios aeróbicos en casa que va realizando nuestra monitora.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Las sesiones de ejercicios aeróbicos van desde los 20 hasta los 45 minutos de duración, lo que te permite hacer un entrenamiento adaptado al tiempo del que dispongas. Pudiendo repetir las sesiones tantas veces como sea necesario hasta interiorizar y realizar correctamente todos los movimientos. A qué esperas a ponerte en forma? Empieza a entrenar hoy mismo!.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -385,7 +385,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>La sesiones de aeróbic online constan de: calentamiento, fase principal (ejercicios básicamente cardiovasculares, combinados con ejercicios de tonificación), y  vuelta a la calma (estiramientos y bajada de pulsaciones). La duración de estas sesiones de para hacer en casa van desde los 20 a los 40 minutos, de esta manera tu decides en función del tiempo del que dispongas.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Fácil, cómodo y sencillo: Tu eliges el nivel y nuestra Monitora te guiará durante toda la sesión de entrenamiento y te enseñará diferentes pasos para que las clases sean mucho más amenas y efectivas. Únete a ictiva, tu gimnasio online y empieza a practicar hoy mismo nuestros ejercicios!</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -400,7 +400,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">QUÉ SON LOS EJERCICIOS AERÓBICOS</h2>
                     <p class="mb-3 ls text-medium">Son aquellos ejercicios que se practican a una baja o media intensidad y que son prolongados en el tiempo, lo que hace mantener una frecuencia cardíaca  elevada, pero sin la necesidad de llegar a la extenuación. Los ejercicios aeróbicos son muy recomendable ya que aportan una mayor resistencia, ayudan a combatir la obesidad y las enfermedades cardiovasculares, aparte de tener muchos más beneficios . Por eso en esta sala, no solo te divertirás bailando al ritmo de la música, si no que cuidarás tu salud practicando una actividad cardiovascular acorde a tu estado de forma ya que disponemos de diferentes niveles de dificultad.</p>
                     <p class="mb-3 ls text-medium">La actividad física es imprescindible para nuestra salud y nuestro estado de ánimo ya que gracias a que la generación de endorfinas (hormona de la felicidad), nos ayuda a sentirnos muy bien a nivel psicológico. Cómo ves, practicar ejercicios aeróbicos de forma rutinaria, nos hace ser más felices y gozar de una buena salud.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -417,7 +417,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">¿Sabías que puedes llevarte el gimnasio en el bolsillo dónde y cuándo tu quieras? Gracias a la app de ictiva, no sólo podrás realizar esta disciplina desde el lugar que más te inspire, sino que dispones de más de 20 disciplinas a practicar.</p>
                     <p class="mb-3 ls text-medium">Disfruta ahora de la  <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" target="_blank" class="text-primary">app para hacer aeróbic en casa</a>, descargándotela de Google Play y haz de ti tu mejor versión. También encontrarás en tu tienda Apple Store la app de ictiva, tu gimnasio online. Todo un gimnasio en la palma de tu mano.</p>
                     <p class="mb-3 ls text-medium">Podrás hacer un seguimiento de tu actividad, unirte a nuestra comunidad en Facebook, acceder a  todas las salas de ejercicios, planes de entrenamiento, configurar tu propio objetivo y seguir un plan nutricional acorde al entrenamiento que estás realizando. También dispones de una herramienta motivacional que te permite lograr puntos y optar a magníficos regalos. Puedes ganar hasta un viaje!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -433,7 +433,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Raquel Talavera es la profesional que te conducirá en la práctica de esta disciplina.  Licenciada en Ciencias de la Actividad Física y Deporte, tiene a sus espaldas una amplia experiencia que la avalan como profesora en esta disciplina. Gracias a su encanto personal y a su manera de llevar la sesión, te cautivará su forma de entrenar a la vez que te pones en forma.</p>
                     <p class="mb-3 ls text-medium">Sentirás que te acompaña continuamente, como si estuvieras presente en el propio gimnasio. Te explicará paso a paso y con detalle cada uno de los ejercicios a realizar.</p>
                     <p class="mb-3 ls text-medium">Practicar aeróbic en casa para principiantes te será muy sencillo con Raquel Talavera. No lo dudes y regístrate hoy mismo en ictiva y empieza con la primera sesión. En unas pocas semanas podrás comprobar todos los beneficios que te aporta esta modalidad deportiva, tanto por dentro como por fuera. Anímate y empieza ya!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -450,7 +450,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Conserva un nivel de hidratación adecuado en función de la actividad del ejercicio y de la temperatura ambiente en el que se esté practicando.</p>
                     <p class="mb-3 ls text-medium">Para alcanzar unos resultados óptimos tienes que ser constante con tu rutina de ejercicios.</p>
                     <p class="mb-3 ls text-medium">El cálculo de gasto calórico que encontrarás en cada sesión corresponde a una media aproximada. Ictiva no se hace responsable del uso inadecuado de nuestra plataforma y no garantiza su resultado, ya que éste depende de mucho factores (genéticos, nutricionales, de la duración de la actividad física y de la constancia de la misma, aparte de otros factores).</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
