--- a/ejercicios-fitness.html
+++ b/ejercicios-fitness.html
@@ -257,7 +257,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">AHORA 3 MESES x 15€</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -276,7 +276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white text-medium mb-5">Entrenamientos online para realizar tus ejercicios de fitness donde quieras</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">El Gym de fitness que necesitas</h2>
                     <p class="text-white text-medium mb-5">La revolución para tus sesiones de entreno: Rutinas de ejercicios de 10 a 50 minutos que cambiarán tu cuerpo. Descúbrelas!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">Inicia tu Entrenamiento</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-2 px-sm-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -365,7 +365,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Cada vez hay más gente que se preocupa por su aspecto físico y quiere estar en forma, para ello, no dudan en realizar ejercicio semanalmente. Es por ello, que es muy importante ejercitar todo el cuerpo de una forma correcta.</p>
                     <p class="mb-3 ls text-medium">Las clases de fitness de ictiva permiten ejercitar y muscular todo el cuerpo. Esto aportará la fuerza y flexibilidad necesarias a tus músculos, corrigiendo tu postura y evitando dolores musculares y lesiones como las tendinitis y las contracturas.</p>
                     <p class="mb-3 ls text-medium">En nuestras sesiones de entrenamiento, encontrarás una gran variedad de ejercicios para ejercitar todas y cada una de las diferentes partes del cuerpo. Así, ejercicios como bíceps concentrado a una mano (el cual consiste en levantar una pesa con un brazo sentados en una silla. de esta manera, podremos usar como soporte nuestra propia pierna para guiar el brazo), sentadillas con piernas paralelas (se trata de imitar el movimiento que realizamos la sentarnos pero sin llegar a sentarnos en una silla) o fondos de piernas (con el que vamos a flexionar una rodilla hacia abajo sin llegar a tocar el suelo mientras que la otra está hacia delante). Son los que podrás realizar en tus sesiones de entrenamiento en casa.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -381,7 +381,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Con tu gym fitness online, podrás realizar tus entrenamientos específicos donde quieras. Ya que nuestras clases consisten en vídeos online, realizados por auténticos expertos en la materia que sabrán darte los consejos necesarios para ejecutar correctamente los ejercicios durante toda la duración de los vídeos. Esto hace que los ejercicios de fitness sean realmente efectivos a la hora de moldear tu cuerpo en casa.</p>
                     <p class="mb-3 ls text-medium">En esta sección hemos clasificado los vídeos en función del área del cuerpo que nos hace trabajar: brazos, piernas, glúteos, abdomen, espalda, pecho y hombros. Además, en cada vídeo te mostramos si se hace con el peso del propio cuerpo o algún tipo de accesorio para que lo tengas preparado antes de empezar a reproducir el vídeo seleccionado, las calorías que vas a quemar haciéndolo, la duración del ejercicio, el nivel de dificultad, el entrenador y qué parte del cuerpo nos hace trabajar.</p>
                     <p class="mb-3 ls text-medium">Te ponemos todas las facilidades posibles para que solo tengas que dar al play y empezar con tu entrenamiento en casa.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -398,7 +398,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Las entrenadoras Rebeca y Sandra ayudarán a esculpir el cuerpo de aquellas mujeres que quieran ponerse en forma desde su casa. Encontraréis cinco niveles de de clases (principiante, básico, medio, avanzado y por) con los que empezarás con ejercicios fitness sencillos hasta llegar a sesiones completas más cañeras.</p>
                     <p class="mb-3 ls text-medium">Porque en ictiva sabemos que es importante adaptar el ejercicio a medida que vayáis progresando y aumentando vuestra capacidad física.</p>
                     <p class="mb-3 ls text-medium">Jonathan es el encargado de dirigir las clases en la secció “Cuerpo perfecto” con ejercicios específicos para los hombres. También consta de 5 niveles de dificultad con ejercicios que os ayudarán a estar en forma de forma gradual y sin complicaciones, adaptándose a cada etapa en la que os encontréis.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -415,7 +415,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En esta sección, podréis indicar vuestro IMC y vuestras medidas corporales antes de empezar vuestro entrenamiento. Una vez hayáis empezado, os mostrará información importante como por ejemplo las calorías quemadas, los ejercicios realizados, el tiempo total que habéis pasado entrenando, los días que habéis realizado los ejercicios y a qué disciplina pertenecen.</p>
                     <p class="mb-3 ls text-medium">Estos datos os permitirán a llevar un control y a tener información importante para saber cómo va vuestra evolución y os ayudará a alcanzar vuestros objetivos.</p>
                     <p class="mb-3 ls text-medium">De esta forma, tendréis todos los datos necesarios para aseguraros que estáis realizando un entrenamiento de calidad y efectivo en una misma página web y tener un control total sobre vuestro cambio físico.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -432,7 +432,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Como en ictiva queremos ayudaros en todo lo posible a alcanzar estos objetivos hemos creado el apartado “Dietas” con diferentes planes nutricionales según las necesidades de cada objetivo de nuestros usuarios.</p>
                     <p class="mb-3 ls text-medium">En esta sección, encontrarás una gran variedad de recetas fáciles de hacer, ricas y con el aporte calórico diario que necesites. Además, son dietas con 5 comidas diarias, ya que una dieta consiste en comer mejor y más sano, no en dejar de comer por completo y una vez cumplidos vuestros objetivos volver a comer como antes, ya que de esta forma solo conseguimos el temido efecto rebote (recuperar el peso perdido en cuanto dejamos la dieta) con nuestras recetas, conseguirás mantener tu peso ideal para siempre.</p>
                     <p class="mb-3 ls text-medium">Si alguna de nuestras recetas no te convence puedes consultar las recetas saludables que pueden sustituir las comidas que no te gustan. Cada dieta fitness cuenta con su información nutricional.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -451,7 +451,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Al descargar la aplicación tendréis acceso a los ejercicios pero también a las vídeo-sesiones de todas las disciplinas disponibles en ictiva (25 en total) lo que supone más de 800 vídeos diferentes.</p>
                     <p class="mb-3 ls text-medium">También tendréis acceso a todas las rutinas y las recetas que necesitáis para seguir con vuestro plan de entrenamiento.</p>
                     <p class="mb-3 ls text-medium">Con nuestro gym fitness contaréis con más de 50 clases gratuitas para que podáis probar sin compromiso la sala que más os guste. ¡Nunca una aplicación de deporte en casa fue tan completa!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento ahora</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
