--- a/ejercicios-hiit.html
+++ b/ejercicios-hiit.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Entrena en casa  y ponte en forma más que nunca en pocas semanas</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Empieza tu rutina de ejercicios hiit en casa</h2>
                     <p class="text-white text-medium mb-5">Ya seas principiante o tengas un nivel más avanzado, tenemos los entrenamientos ideales para ti. A qué esperas para hacer el cambio?</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -369,7 +369,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">¿Sabes de qué trata el método que está enganchando a todo el mundo? Descubre esta disciplina con ictiva. Se trata de una modalidad deportiva en la que se hacen series de vídeos de alta intensidad pero se aprovecha el tiempo de descanso entre cada ejercicio para hacer ejercicios de menor intensidad. De esta manera, haces trabajar el cuerpo todo el rato y se aprovecha cada minuto del entrenamiento al máximo.</p>
                     <p class="mb-3 ls text-medium">Al ser de intensidad elevada, se recomienda tener cierto nivel de forma física para poder hacer los ejercicios. Para aquellos que quieran dar sus primeros pasos en esta disciplina y para poder aprender de la mejor manera posible y progresar en cuanto antes, hay una categoría específica para ellos.</p>
                     <p class="mb-3 ls text-medium">Este deporte es ideal para aquellas personas que no tienen mucho tiempo al día para hacer deporte, ya que con 20 minutos basta para hacer trabajar todo el cuerpo, además, como es a gran intensidad, conseguirás un mayor efecto en el cuerpo, prolongando los efectos del deporte, incluso hasta varias horas después de haber acabado los ejercicios hiit en casa.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">ENTRENA AHORA</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -384,8 +384,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary text-uppercase">Practica esta modalidad dónde y cuándo quieras</h2>
                     <p class="mb-3 ls text-medium">Este es un deporte que se puede practicar en prácticamente cualquier lugar, ya que no se necesitan de espacios grandes, con lo que el salón de casa, la habitación o incluso el parque o una sala en la oficina, se convertirán en la sala de entrenamiento perfecto para practicar ejercicios hiit en casa.</p>
                     <p class="mb-3 ls text-medium">Además, el material que vayas a usar en la mayor parte de los vídeos es el peso de tu propio cuerpo para hacer las repeticiones. Como mucho, necesitarás unas pesas o una silla para apoyarte.</p>
-                    <p class="mb-3 ls text-medium">Así que ya no tienes excusa para saltarte una sesión de entrenamiento. No lo dudes más y empieza hoy mismo con los <a href="https://www.ictiva.com/ejercicios-en-casa/hiit/" class="text-primary">vídeos hiit</a>. Verás que el cuerpo se irá moldeando a medida que vayas perdiendo grasa corporal y ganando masa muscular.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">EMPIEZA YA!</a></p>
+                    <p class="mb-3 ls text-medium">Así que ya no tienes excusa para saltarte una sesión de entrenamiento. No lo dudes más y AHORA 3 MESES x 15€ con los <a href="https://www.ictiva.com/ejercicios-en-casa/hiit/" class="text-primary">vídeos hiit</a>. Verás que el cuerpo se irá moldeando a medida que vayas perdiendo grasa corporal y ganando masa muscular.</p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva contamos con los mejores profesionales que sabrán guiarte a lo largo de todas las sesiones, explicando cómo hacer correctamente los ejercicios. Jordi Bertrán y Francesco Taddei son los encargados de guiarte durante los entrenamientos, ya sea en las sesiones de entrenamiento o en los ejercicios.</p>
                     <p class="mb-3 ls text-medium">En sus sesiones de ejercicios hiit, verás el paso a paso para realizar los ejercicios, pero también verás el material que necesitas para realizar cada ejercicio, lo que te ayudará a estar preparado antes de empezar la sesión de entrenamiento.</p>
                     <p class="mb-3 ls text-medium">Además, en estos vídeos también verás las calorías que vas a quemar haciendo las rutinas de ejercicios hiit en casa, la disciplina a la que pertenece dicho ejercicio, las partes del cuerpo que te hace trabajar y la duración y dificultad del vídeo. Lo que te servirá de guía durante tu evolución deportiva.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">PRUEBA GRATIS</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -418,7 +418,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Cuando la descargues, tendrás acceso a más de 50 vídeos gratis de, a parte de los ejercicios de esta disciplina, de más de 21 disciplinas diferentes, para que hagas aquellos que más te gusten tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Una vez te abones, podrás ver más de 800 videosesiones diferentes de todas las disciplinas disponibles en ictiva.</p>
                     <p class="mb-3 ls text-medium">Además de ver los vídeos de los ejercicios también podrás hacer un seguimiento de tu evolución física, teniendo acceso a gráficos y estadísticas que muestran los cambios de tu IMC, de tu peso, de las calorías que consumes a lo largo del entrenamiento y del tiempo total que has pasado realizando deporte. Esto te servirá de guía pero también te dará una motivación extra para que no pares con tu <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva" class="text-primary">entrenamiento diario</a>  hasta alcanzar tu objetivo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">DESCUBRE ICTIVA</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -435,7 +435,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Es por esto que los profesionales de ictiva han preparado varios planes nutricionales en función de los objetivos de nuestros usuarios para que cada uno encuentre el régimen que mejor le conviene.</p>
                     <p class="mb-3 ls text-medium">Estos regímenes están formados por 5 comidas al día completas, porque no se trata de comer menos durante una dieta, sino de comer mejor. Si uno de los platos que os proponemos no te gusta, puedes cambiarlo por alguno de los que te sugerimos.</p>
                     <p class="mb-3 ls text-medium">Además, también te indicamos el valor nutricional de cada plato para que sepas en todo momento lo que te aporta al organismo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">EMPIEZA HOY MISMO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -451,7 +451,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que encuentres la motivación extra que necesitas, hemos creado un apartado llamado “Motivator”. Gracias a esta herramienta te proporcionaremos frases de ánimo cada vez que visualices por completo una viedeosesión.</p>
                     <p class="mb-3 ls text-medium">También te daremos una puntuación al final de cada entrenamiento para que los acumules, también puedes ganar puntos extra compartiendo tus resultados en tus redes sociales para que tus amigos y familiares vean tu evolución. Los tres usuarios con más puntos la final de cada mes y al final de cada trimestre ganarán un premio.</p>
                     <p class="mb-3 ls text-medium">En ictiva no dejamos nada al azar y te damos todas las claves para que logres tus objetivos. con el “Motivator” no habrá excusa que valga para que te saltes un entrenamiento, encuentra ya la motivación que necesitas.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">DESCUBRE ICTIVA</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
