--- a/ejercicios-de-abdominales.html
+++ b/ejercicios-de-abdominales.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">AHORA 3 MESES x 15€</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Con ictiva, tú también puedes presumir de abdomen.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">DESCUBRE LOS MEJORES EJERCICIOS DE ABDOMINALES</h2>
                     <p class="text-white text-medium mb-5">¡Los tenemos todos en ictiva para que sólo tengas que pasar a la acción!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -373,7 +373,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Esta zona, es una de las partes del cuerpo donde más grasa se acumula. Por esta razón, es imprescindible llevar a cabo una buena rutina semanal para eliminar la grasa localizada, fortalecer y definir. Porque recuerda que, en el deporte, prima la calidad a la cantidad.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Si quieres los abdominales que aún desconoces que puedes tener, déjanos a ictiva el trabajo de recomendarte los mejores ejercicios para abdominales, para que tú sólo te centres en ejecutarlos para alcanzar tu objetivo. ¡Si quieres, puedes conseguirlo!</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">ENTRENA AHORA</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -391,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Realizar los ejercicios de abdominales te será bien sencillo. Ya no tendrás excusas, ya que ictiva te ofrece la libertad de entrenar donde y cuando quieras, con unos vídeos de calidad para que puedas seguir las directrices con fluidez. Todas las ventajas de tener clases dirigidas en el salón de tu casa.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Cada una de las clases te indican toda la información que necesitas saber: En qué consiste la vídeosesión, la duración, la dificultad, material a emplear (si fuera necesario) y las calorías.  Te garantizamos que ictiva alberga los mejores ejercicios para abdominales para alcanzar tu objetivo.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">EMPIEZA YA!</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Las sesiones tienen diferentes duraciones para adaptarnos al tiempo del que dispongas. Encontrarás que el tiempo del que dispongas, será suficiente y valiosísimo, para realizar las clases de ictiva. Sacarás el mayor rendimiento del tiempo que tengas. Y, para hacerlo aún más personalizado, tienes a tu disposición distintos niveles de dificultad para que sea cual sea el punto en el que estés, tengas tu rutina de ejercicios abdominales.</p>
                     <p class="mb-3 ls text-medium">Para conseguir eliminar la grasa localizada y la flacidez, fortalecer y marcar tu sixpack, realizarás todo tipo de abdominales (transversos, inferiores, oblicuos, etc), los ejercicios para tener abdominales más efectivos, como el Mountain Climber, Spiderman, todo tipo de planchas, círculo de piernas, elevaciones, Crunch, etc. Te será ameno entrenar gracias al abanico de posibilidades que te presentamos en el gimnasio.</p>
                     <p class="mb-3 ls text-medium">Te aseguramos que, si eres constante y, sigues los consejos de los profesionales paso a paso y prestando atención a la colocación/repeticiones/descansos, en pocas semanas notarás los beneficios.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">PRUEBA GRATIS</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -425,7 +425,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Llévate el entreno a tu lugar preferido, tonifica tu zona abdominal y consigue el abdomen que desees. Porque Internet te ofrece la posibilidad de obtener un sinfín de entrenamientos, pero, ¿son los acertados para tu objetivo, tu nivel y condición física? ictiva lo es. Estará en las mejores manos.</p>
                     <p class="mb-3 ls text-medium">La app de ictiva es el modo perfecto de no interrumpir tu rutina de ejercicios. Podrás practicarlo en cualquier sitio, sin excusas. Tanto si está en época vacacional como si eres una persona que viaja mucho, el gimnasio estará en tu bolsillo para que acudas cuando tú quieras.</p>
                     <p class="mb-3 ls text-medium">Hacer ejercicios de abdominales te será muy cómodo, con la sencillez de pulsar un botón y mucho más económico que un gimnasio físico. Tendrás un control de tu actividad, acceso a todas las salas de disciplinas diversas, planes nutricionales, planes de entrenamiento y mucho más. También tines disponible la <a href="https://itunes.apple.com/es/app/gimnasio-online-rutinas/id1217405866?mt=8" class="text-primary">aplicación de entrenamiento de abdominales</a> en la Apple Store. Descárgatela ya!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">EMPIEZA HOY MISMO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -441,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">En ictiva encontrarás una Sala de ejercicios dedicada única y exclusivamente a esta zona. Con explicaciones detalladas para que entrenes de forma correcta, con las posiciones precisas para evitar lesiones, de la mano de las mejores profesionales.</p>
                     <p class="mb-3 ls text-medium">Pero, además de la sala específica, podrás seguir vídeosesiones  para todos los gustos y necesidades en otras salas del gimnasio. Salas con las que perderás la grasa de esta área como por ejemplo TBC o entrenamiento Hitt, pasando por clases de Fitness Girl o Cuerpo Perfecto más enfocadas a tonificar. También, tienes a tu alcance, una forma distinta y altamente recomendada para lograr un abdomen fuerte y con una salud inmejorable: Gimnasia Hipopresiva.</p>
                     <p class="mb-3 ls text-medium">Como puedes ver, en ictiva tenemos los mejores ejercicios para alcanzar tu objetivo. Diversidad en las disciplinas, niveles para adaptados a ti, los mejores profesionales cualificados y con varias duraciones para que sean alcanzables, sea cual sea el tiempo del que dispongas.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">ENTRENA AHORA</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
