--- a/ejercicios-gap.html
+++ b/ejercicios-gap.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">La rutina perfecta para poner en forma tu tren inferior.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">Empieza a practicar las clases de GAP y descubre sus beneficios</h2>
                     <p class="text-white text-medium mb-5">Gracias a estos ejercicios podrás tener el cuerpo esbelto que siempre has querido. Y lo puedes hacer desde casa!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Apúntate gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -320,7 +320,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Reduce y define la cintura</li>
                     <li class="line-height-2 ls mb-4"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Mejora la circulación sanguíneaz</li>
                 </ul>
-                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
+                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
             </div>
         </div>
     </section>
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Si quieres hacer GAP en casa para tonificar, definir y perder peso en tu tren inferior, estás en el lugar adecuado, en ictiva tenemos ejercicios que te ayudarán a fortalecer estas partes del cuerpo, nuestros profesores te enseñarán cómo hacerlos, ya verás que enseguida cogerás el ritmo.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>No lo dudes más y empieza hoy mismo con tus clases de GAP en casa, te sorprenderás con los resultados.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -390,7 +390,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Nuestros Ejercicios GAP se pueden hacer en cualquier lugar y en la mayoría de casos no necesitaremos material extra para hacerlo, el peso de nuestro cuerpo será suficiente. Sí que recomendamos usar una esterilla para aquellos ejercicios que hagamos en el suelo para que no nos duela el cuerpo.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>El GAP online se recomienda para todo el mundo porque tiene grandes beneficios, además sus ejercicios se adaptan a cualquier forma física.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -406,7 +406,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Esta rutina debe empezarse con un calentamiento y unos estiramientos de unos 10 minutos para preparar la zona que vamos a hacer trabajar. Podemos hacer un poco de cardio para ayudar a quemar grasa que como hemos dicho en esta zona se suele acumular y es un poco más difícil de eliminar.</p>
                     <p class="mb-3 ls text-medium">Después del calentamiento vienen los Ejercicios GAP en cuestión, los intentaremos hacer a alta intensidad en la medida en la que seamos capaces para hacer trabajar a tope nuestros músculos. No debemos olvidar hacer estiramientos al final de la rutina para ayudar a la recuperación muscular. No olvidéis, tampoco, beber agua durante todo el GAP entrenamiento.</p>
                     <p class="mb-3 ls text-medium">En nuestra página web encontraréis una gran variedad de estos ejercicios. El GAP entrenamiento se puede hacer de pie, tumbados boca abajo o boca arriba, con material de apoyo o sin él. Por ejemplo las sentadillas y todas sus variantes, elevación de cadera, squats isométricos, zancada, elevación de piernas y muchos más.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Un plan nutricional tiene que adaptarse a cada persona, a sus necesidades y a sus objetivos. Tiene que ser completa porque no se trata de que la persona que la hace tenga hambre, sino de que coma lo que su cuerpo necesita. Para esto, nuestras dietas constan de 5 platos diarios.</p>
                     <p class="mb-3 ls text-medium">En nuestra página web encontrarás un apartado especial con las recetas de cada régimen para que puedas hacerlos en casa, verás que son muy sencillas y rápidas de hacer. Además, si uno de los platos no te gusta o no lo puedes comer por alergia o intolerancia puedes sustituirlo por otro que te proponemos.</p>
                     <p class="mb-3 ls text-medium">En cada receta encontrarás la información nutricional del plato que vas a preparar para que sepas en todo momento lo que estás comiendo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -440,7 +440,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">A parte, podrás acceder gratuitamente a 50 vídeos de otras más de 21 disciplinas diferentes, los podrás hacer tantas veces como quieras. Cuando te abones, tendrás acceso ilimitado a más de 800 videosesiones diferentes.</p>
                     <p class="mb-3 ls text-medium">Aparte de visualizar las videosesiones, nuestra App te permite hacer un seguimiento de tu evolución física a lo largo de los entrenamientos. Esta evolución la podrás ver a través de estadísticas y gráficos que te mostrarán tu IMC, tu peso, el tiempo total que has estado entrenando y las calorías que has quemado, entre otros.</p>
                     <p class="mb-3 ls text-medium">La herramienta de ictiva que te dará la motivación extra que buscas</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -456,7 +456,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que siempre tengas ganas de hacer GAP gimnasio y que no quieras dejarlo, hemos creado un apartado llamado Motivator que te dará una frase para motivarte cada vez que finalices de visualizar una videosesion.</p>
                     <p class="mb-3 ls text-medium">Para darte una motivación extra también te daremos unos puntos cada vez que hagas estas rutinas  completas para que los puedas ir acumulando. Al final de cada mes y de cada trimestre los tres usuarios que tengan más puntos ganarán un premio diferente cada uno. Puedes compartir los puntos que acumulas en tus redes sociales para ganar puntos extra y para que tus amigos vean cómo va tu evolución y te animen a seguir trabajando duro.</p>
                     <p class="mb-3 ls text-medium">Gracias a estas herramientas siempre estarás motivado y no tendrás excusas para saltarte un entrenamiento. Entra ya y empieza hoy a hacer estos ejercicios que cambiarán tu tren inferior.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -465,7 +465,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid banner-primary">
             <div class="row py-3 text-white">
                 <div class="col-lg-12 text-center">
-                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/usuarios</alta/?home=gimnasio" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
