--- a/posturas-de-yoga.html
+++ b/posturas-de-yoga.html
@@ -259,7 +259,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">PRUEBA GRATIS</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li>
                     <!-- <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -278,7 +278,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Ictiva te enseña las posiciones de yoga más comunes.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">Asanas de yoga para mejorar tu salud</h2>
                     <p class="text-white text-medium mb-5">Regístrate en ictiva y empieza hoy mismo a cuidarte a través de las posturas de yoga y sus videosesiones.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Apúntate gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -370,7 +370,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Otra razón por la que son ideales para todo el mundo es que tenemos vídeos para todos los niveles, desde principiantes hasta pro, por lo que los que tengan un nivel más avanzado también encontrarán clases que sabrán desafiar sus habilidades.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Teniéndolo todo en un mismo lugar, y con un acceso tan fácil, ¿a qué espera para empezar? Solo tiene que dar al play y hacer los ejercicios.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -388,7 +388,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>El saludo al sol, por ejemplo, empieza de pie con los pies juntos y llevando las manos a la altura del pecho, después bajaremos poniendo las manos al suelo, pondremos un pie atrás y después el otro. Después apoyaremos las rodillas al suelo y bajaremos el pecho al suelo y luego volveremos a subir, hasta quedar con los pies y las manos apoyados al suelo y el culo hacia arriba. Volveremos a la posición inicial llevando primero una pierna al lado de las manos y después otra. A continuación, subimos las manos por encima de la cabeza y las inclinamos hacia atrás, y habremos acabado.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Otra de ellas para relajarse y meditar es el Pranayama, consiste en sentarse sobre una esterilla con las piernas cruzadas y los ojos cerrados, cuando estemos cómodos, respiraremos profundamente para relajarnos y dejar la mente en blanco, cuando todo nuestro cuerpo esté relajado, seguiremos respirando lentamente durante un minuto. Pasado este minuto, el ejercicio habrá acabado. Esta es una de las posturas yoga más usadas para empezar y/o acabar las sesiones.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -404,7 +404,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Rosa Mº Madrid es la monitora que se encargará de dirigir las clases y de enseñaros cómo hacer las asanas. Es una gran profesional que cuenta con varios años de experiencia trabajando como profesora en varios centros oficiales de esta disciplina.</p>
                     <p class="mb-3 ls text-medium">Gracias a toda esta experiencia te explicará de forma muy detallada cómo hacer las posturas yoga y sentirás que estás en un curso presencial, además de sentirte acompañado en todo momento, tengas el nivel que tengas.</p>
                     <p class="mb-3 ls text-medium">Esto ha ayudado a mucha gente y les ha dado confianza, porque un profesional, como Rosa, con experiencia y que sepa enseñar de forma cercana, es lo que marca la diferencia.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -421,7 +421,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Nada más descargarla podrás ver más de 50 vídeos gratis, no solo los de las posiciones de yoga, sino de las más de 21 disciplinas que cuenta nuestro gimnasio. Estos vídeos los podrás ver tantas veces como quieras.</p>
                     <p class="mb-3 ls text-medium">Si te abonas podrás ver más de 800 videosesiones diferentes de nuestras disciplinas, o que te permitirá tener acceso a un plan de entrenamiento completo.</p>
                     <p class="mb-3 ls text-medium">No solo podrás entrenar, sino que además podrás hacer un seguimiento de tu evolución gracias a los gráficos y estadísticas sobre tu IMC, tu peso, las calorías que has quemado y los vídeos que has visto, es como tener un entrenador personal contigo las 24 horas del día que te ayuda con todo lo que necesitas, ¿a qué es genial? Pues no esperes más y descárgala hoy mismo.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -437,7 +437,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Para que el ejercicio que hagas haciendo las diferentes posiciones de yoga sea 100% efectivo recomendamos acompañarlo de una buena dieta. Pero no una dieta que te haga pasar hambre, no, sino una dieta completa, de 5 raciones al día y que sea en función de lo que necesitas, que sea equilibrada y completa.</p>
                     <p class="mb-3 ls text-medium">Para que todo el mundo tenga acceso a una dieta acorde a todo esto hemos creado un apartado específico en nuestra página web para que podáis elaborar platos sanos y sabrosos en casa en pocos minutos, no hace falta que seáis un chef para poder elaborarlos, con los pasos a seguir que os indicamos todo el mundo podrá prepararlos.</p>
                     <p class="mb-3 ls text-medium">Si alguno de los platos no te gustan o no los puedes comer por alergia o intolerancia, no pasa nada, lo puedes sustituir por oro que te proponemos. Además, en cada receta veréis el valor nutricional que tiene cada plato para que lo tengáis en cuenta.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -454,7 +454,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Os recordamos que hay que seguir las instrucciones que os da la profesora en los vídeos al pie de la letra, así evitaréis lesiones, ya que sois vosotros mismo los responsables de seguir sus instrucciones.</p>
                     <p class="mb-3 ls text-medium">Además, el número de calorías que vais a quemar es indicativo, ya que depende de varios factores. Ictiva no se hace responsable del mal uso de sus plataformas y no garantiza los resultados.</p>
                     <p class="mb-3 ls text-medium">Si ponéis en práctica todos estos consejos y usáis correctamente nuestra página web, podréis aprovecharla al máximo y maximizar los beneficios.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
