--- a/rutina-de-abdominales.html
+++ b/rutina-de-abdominales.html
@@ -261,7 +261,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/">AHORA 3 MESES x 15€</a>
                     </li><!-- 
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Videosesiones virtuales para tener un abdomen perfecto!</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4 font-weight-bold">RUTINA ABDOMEN PARA MUJERES Y HOMBRES</h2>
                     <p class="text-white text-medium mb-5">Déjate guiar por las clases online de ictiva y consigue en pocas semanas un abdomen tonificado y definido.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Inicia tu Entrenamiento</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -371,7 +371,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Puedes escoger diferentes entrenamientos de abdominales, como te desarrollaremos más adelante o, entrar en la sala dedicada exclusivamente al abdomen, compuesta por más de 20 videosesiones de trabajo intenso con rutina de abdominales para mujeres. Rutinas como las que te mostramos en esta sesión que te proponemos, para que puedas probar un ejemplo de lo que vas a encontrar en el gimnasio. Te invitamos a realizar este VÍDEO PREMIUM, que ponemos a tu disposición en su totalidad.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Un ejemplo sencillo de las  Rutinas de abdominales para mujeres que te vas a encontrar. “KRATOS” es un vídeo de nivel básico con el que quemarás 67 calorías en 09:26 min, con los ejercicios de Elevación de piernas en semi-flexión y Plancha lateral suelo “codo-rodilla”. Ten en cuenta que existen más niveles y salas, por lo que, una vez dentro del gimnasio, podrás escoger el entreno a tu medida.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -389,7 +389,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Se trata de un VÍDEO PREMIUM al completo como ejemplo de una videosesión del gimnasio.Gracias a la calidad del vídeo, grabado con material profesional y con distintos tiros de cámara, podrás ver todos los movimientos al detalle, la colocación y los tiempos; ¡como si estuvieras en la primera fila de la clase dirigida del gimnasio!</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>En esta rutina de abdominales para hombres de nivel básico llamada “GOHAN”, está compuesta por dos ejercicios de planchas para un trabajo completo de abdomen, con una duración de 06:42 minutos y un gasto calórico de 64 calorías.  El primer ejercicio, es una Plancha frontal suelo “Spiderman” y la segunda, la Plancha lateral suelo “codo-rodilla”. Dos ejemplos, de entre los muchos que te esperan en el gimnasio, que demuestran que los abdominales no sólo se ejercitan con los ejercicios comúnmente conocidos. La variedad y la eficacia está servida con ictiva.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -407,7 +407,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Cada videosesión está dirigida por los profesionales de ictiva que, en caso de ser necesario, te explicarán al detalle, cuál debe ser la postura a adoptar para realizar el ejercicio. Paso a paso, haciendo contigo los descansos y acompañándote en tu esfuerzo hasta el final, en todo el proceso. A través de vídeosesiones de 10 minutos de duración hasta clases dirigidas de más de 40. Sea cual sea el tiempo que quieras dedicar a cuidarte, encontrarás un vídeo a tu necesidad.</li>
                         <li class="mb-3 ls text-medium"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Además del tipo de ejercicio y tiempo, la dificultad también es una opción que decides tú. Entrenamientos adaptados a ti, para que puedas aplicarlos en el día a día de tu vida, haciéndote sencilla la mejor opción que puedes tomar: trabajar en conseguir el mejor abdomen que puedas tener.</li>
                     </ul>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Y si quieres más variedad en tu entrenamiento, no sólo encontrarás rutina de abdominales en la sala específica de “Abdominales”, en la cual todas las vídeosesiones están dedicadas exclusivamente a esta zona del cuerpo. También, podrás ejercitar el abdomen en otras disciplinas del gimnasio, de la mano de los mejores profesionales.</p>
                     <p class="mb-3 ls text-medium">Salas como por ejemplo Combat o Steps, te ofrecen coreografías dedicadas a eliminar la grasa y endurecer la cintura.  En TBC no existe la monotonía, ya que combina variedad de ejercicios con una intensidad considerable. Con las salas Tabata y Crossfitness perderás la grasa localizada, a la vez que tonificas.  Siguiendo las vídeosesiones de Cuerpo Perfecto, TDS, Fitness y Fitness Girl, perderás la flacidez, consiguiendo un abdomen tonificado y marcado.</p>
                     <p class="mb-3 ls text-medium">Si quieres una rutina abdomen diferente, con la que podrás ver resultados increíbles, ictiva dispone de una disciplina muy valiosa: Gimnasia Hipopresiva. Avalada por personalidades reconocidas por sus beneficios para reducir la cintura y reforzar el suelo pélvico. A su vez, puedes escoger Pilates para tonificar y ganar flexibilidad. O, si lo prefieres, con Danza del vientre trabajarás los músculos de un modo poco convencional, al ritmo de la música oriental.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
@@ -439,7 +439,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Tu rutina de abdominales es vital para conseguir el abdomen que deseas pero, no es el único factor imprescindible. La mejor arma para alcanzar tu objetivo se compone de dos elementos fundamentales que van de la mano y, que no son el uno sin el otro. El secreto no es otro que el siguiente: ejercicio y nutrición.</p>
                     <p class="mb-3 ls text-medium">Existen alimentos altamente recomendados para ayudarte a reducir la masa sobrante, otros que son idóneos para ayudarte a muscular la zona o para marcar abdomen. Un buen plan nutricional con la grasa óptima, la cantidad ajustada a tus necesidades y con todos los nutrientes imprescindibles, te garantiza el éxito.</p>
                     <p class="mb-3 ls text-medium">ictiva incluye su propia sección de nutrición para que puedas adaptar tu entrenamiento a un plan nutricional dedicado a tu abdomen. Súmalo a tu rutina de ejercicios  y tendrás el combo perfecto para el éxito.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">INICIA TU ENTRENAMIENTO</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href=" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">AHORA 3 MESES x 15€</a></p>
                 </div>
             </div>
         </div>
